<resources>
    <string name="app_name">Android_DSA</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="list_objects">List Objects</string>
    <string name="hello">Hello</string>
    <string name="your_profile">Your profile</string>
    <string name="updating_title">update_title</string>
    <string name="updating_username">updating_username</string>
    <string name="updating_surname">updating_surname</string>
    <string name="updating_birthday">updating_birthday</string>
    <string name="updating_email">updating_email</string>
    <string name="updating_password">updating_password</string>
    <string name="updating_identifier">updating_identifier</string>
    <string name="updating_description">updating_description</string>
    <string name="updating_cost">updating_cost</string>
    <string name="updating_title_gadget">updating_title_gadget</string>
    <string name="updating_coins">updating_coins</string>
    <string name="updating_title_user">updating_title_user</string>
    <string name="updating_top1">updating_top1</string>
    <string name="updating_top2">updating_top2</string>
    <string name="updating_top3">updating_top3</string>
    <string name="gamer">Gamer</string>
    <string name="chat">CHAT</string>
    <string name="message">Message</string>
    <string name="update">UPDATE</string>
    <string name="messageforum">Message</string>
    <string name="send">SEND</string>
    <string name="hi_there">Hi there,</string>
    <string name="acces_to_your_profile">Acces to your profile!</string>
    <string name="ranking">Ranking</string>
    <string name="any_issue_to_report">Any issue to report?</string>
    <string name="gadget_shop">Gadget Shop</string>
    <string name="buy_some_gadgets">Buy some gadgets!</string>
    <string name="start_playing">START PLAYING</string>
    <string name="report_abuse">Report abuse</string>
    <string name="any_questions">Any questions?</string>
    <string name="faqs">FAQs</string>
    <string name="see_the_community">See the community</string>
    <string name="chat_forum">Chat forum</string>
    <string name="who_is_the_best_player">Who is the best player?</string>
    <string name="can_you_save_the_witcher">Can you save the witcher?</string>
    <string name="delete">DELETE</string>
    <string name="are_you_sure_you_want_to_delete_the_gadget">Are you sure you want to delete the gadget?</string>
    <string name="cost">Cost:</string>
    <string name="description">Description:</string>
    <string name="identifier">Identifier:</string>
    <string name="delete_Title">Delete</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="remember_me">Remember me</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login_main">LOGIN</string>
    <string name="any_other_question">Any other question?</string>
    <string name="player">Player</string>
    <string name="purchase_of">Purchase of</string>
    <string name="are_you_sure_you_want_to_buy_the_gadget">Are you sure you want to buy the gadget?</string>
    <string name="buy">buy</string>
    <string name="cost_purchase">Cost:</string>
    <string name="description_purchase">Description:</string>
    <string name="identifier_purchase">Identifier:</string>
    <string name="send_question">SEND</string>
    <string name="questions">QUESTIONS</string>
    <string name="do_you_have_any_question_you_want_to_make">Do you have any question you want to make?</string>
    <string name="insert_the_title_of_the_message">Insert the title of the message:</string>
    <string name="write_a_title">Write a title...</string>
    <string name="insert_the_message">Insert the message:</string>
    <string name="write_a_message">Write a message...</string>
    <string name="top_1">TOP 1</string>
    <string name="third_position">Third position!</string>
    <string name="whole_classification">Whole classification</string>
    <string name="ranking_of_experience">RANKING OF EXPERIENCE</string>
    <string name="top_3">TOP 3</string>
    <string name="top_2">TOP 2</string>
    <string name="name">Name</string>
    <string name="register_main">REGISTER</string>
    <string name="register_title">REGISTER</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="password_register">Password</string>
    <string name="report_the_abuse">REPORT THE ABUSE</string>
    <string name="description_of_the_abuse">Description of the abuse</string>
    <string name="report_an_abuse">REPORT AN ABUSE</string>
    <string name="who_is_the_informer">Who is the informer?</string>
    <string name="old_password">Old password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="password_change">PASSWORD CHANGE</string>
    <string name="new_password">New password</string>
    <string name="username">Username:</string>
    <string name="do_you_want_to_change_your_password">DO YOU WANT TO CHANGE YOUR PASSWORD?</string>
    <string name="gadgets">GADGETS</string>
    <string name="see_your_gadgets_or_change_your_password">See your gadgets or change your password:</string>
    <string name="coins">Coins:</string>
    <string name="password_myprofile">Password:</string>
    <string name="email_profile">Email:</string>
    <string name="birthday_profile">Birthday:</string>
    <string name="surname_profile">Surname:</string>
    <string name="game_view_content_description">Game view</string>
    <string name="Gamer">Gamer</string>
    <string name="language">Language</string>
    <string name="spanish">Spanish</string>
    <string name="catalan">Catalan</string>
    <string name="english">English</string>
    <string name="return_btn">Return</string>

</resources>