<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif">

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="Return"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:fontFamily="@font/play_regular"
        android:onClick="sendMessage"
        android:text="@string/send_question"
        android:textColor="@color/green_vibrant"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageInput"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/titleQuestions"
        android:layout_width="251dp"
        android:layout_height="56dp"
        android:layout_marginTop="120dp"
        android:text="@string/questions"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="190dp"
        android:text="@string/do_you_have_any_question_you_want_to_make"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle2"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="316dp"
        android:text="@string/insert_the_title_of_the_message"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="180dp"
        android:hint="@string/write_a_title"

        android:textColor="@color/green_vibrant"
        android:textColorHint="@color/green_vibrant"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleQuestions" />

    <TextView
        android:id="@+id/subtitle3"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginTop="432dp"
        android:text="@string/insert_the_message"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/messageInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="296dp"
        android:hint="@string/write_a_message"

        android:textColor="@color/green_vibrant"
        android:textColorHint="@color/green_vibrant"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleQuestions" />



</androidx.constraintlayout.widget.ConstraintLayout>