<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:fontFamily="@font/play_bold"
        android:text="@string/purchase_of"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <EditText
        android:id="@+id/title_profile_gadget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:fontFamily="@font/play_bold"
        android:inputType="text"
        android:text="@string/updating_title_gadget"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profile_gadget">

        <LinearLayout
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_back"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play_regular"
                android:lines="1"
                android:text="@string/identifier_purchase"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="17sp"
                android:textStyle="italic"></TextView>

            <EditText
                android:id="@+id/id_gadget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/play_regular"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/updating_identifier"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play_regular"
                android:lines="1"
                android:text="@string/description_purchase"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="17sp"
                android:textStyle="italic"></TextView>

            <EditText
                android:id="@+id/description_gadget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/play_regular"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/updating_description"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play_regular"
                android:lines="1"
                android:text="@string/cost_purchase"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="17sp"
                android:textStyle="italic"></TextView>

            <EditText
                android:id="@+id/cost_Gadget"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/play_regular"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/updating_cost"
                android:textAlignment="center"
                android:textColor="@color/green_vibrant"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="goBackToGadgetActivity"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/question_purchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="@string/are_you_sure_you_want_to_buy_the_gadget"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/purchaseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="buyGadget"
        android:text="@string/buy"
        android:textColor="@color/green_vibrant"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_purchase" />


</androidx.constraintlayout.widget.ConstraintLayout>