<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif"
    tools:context=".activities.RankingActivity">


    <Button
        android:id="@+id/returnBtn"
        android:layout_width="88dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="goBackToDashBoardActivity"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titleRanking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/ranking_of_experience"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textTop3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnBtn" />


    <TextView
        android:id="@+id/textTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/top_1"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/FirstWinnerProfile"
        app:layout_constraintStart_toStartOf="@+id/FirstWinnerProfile"
        app:layout_constraintTop_toTopOf="@+id/textTop3"></TextView>


    <ImageView
        android:id="@+id/FirstWinnerProfile"
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:background="@drawable/img_circle"
        android:contentDescription="@string/third_position"
        app:layout_constraintEnd_toStartOf="@+id/SecondWinnerProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SecondWinnerProfile"
        tools:ignore="NotSibling"></ImageView>

    <TextView
        android:id="@+id/textTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/top_2"

        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/SecondWinnerProfile"
        app:layout_constraintStart_toStartOf="@+id/SecondWinnerProfile"
        app:layout_constraintTop_toTopOf="@+id/textTop3"></TextView>

    <ImageView
        android:id="@+id/SecondWinnerProfile"
        android:layout_width="70dp"
        android:layout_height="58dp"
        android:background="@drawable/img_circle"
        android:contentDescription="Second position!"
        app:layout_constraintBottom_toTopOf="@+id/textEditTop2"
        app:layout_constraintEnd_toStartOf="@+id/ThirdWinnerProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/FirstWinnerProfile"
        app:layout_constraintTop_toBottomOf="@+id/textTop3"
        tools:ignore="NotSibling"></ImageView>

    <ImageView
        android:id="@+id/ThirdWinnerProfile"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:background="@drawable/img_circle"
        android:contentDescription="@string/third_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SecondWinnerProfile"
        app:layout_constraintTop_toTopOf="@+id/SecondWinnerProfile"
        tools:ignore="NotSibling"></ImageView>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="seeAllClassification"
        android:text="@string/whole_classification"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewRanking">

    </Button>

    <EditText
        android:id="@+id/textEditTop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/updating_top2"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewRanking"
        app:layout_constraintEnd_toEndOf="@+id/SecondWinnerProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/SecondWinnerProfile"
        app:layout_constraintTop_toBottomOf="@+id/SecondWinnerProfile"
        tools:ignore="TouchTargetSizeCheck"></EditText>

    <EditText
        android:id="@+id/textEditTop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/updating_top3"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ThirdWinnerProfile"
        app:layout_constraintStart_toStartOf="@+id/ThirdWinnerProfile"
        app:layout_constraintTop_toTopOf="@+id/textEditTop2"
        tools:ignore="TouchTargetSizeCheck"></EditText>

    <EditText
        android:id="@+id/textEditTop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/updating_top1"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/FirstWinnerProfile"
        app:layout_constraintStart_toStartOf="@+id/FirstWinnerProfile"
        app:layout_constraintTop_toTopOf="@+id/textEditTop2"
        tools:ignore="TouchTargetSizeCheck"></EditText>

    <TextView
        android:id="@+id/textTop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/top_3"
        android:textColor="@color/green_vibrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SecondWinnerProfile"
        app:layout_constraintEnd_toEndOf="@+id/ThirdWinnerProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ThirdWinnerProfile"
        app:layout_constraintTop_toBottomOf="@+id/titleRanking"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRanking"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditTop2"></androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>