<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif"
    tools:context=".activities.ChatActivity">

    <Button
        android:id="@+id/returnBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="goBackToDashBoardActivity"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_chat"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/chat"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/messageGamer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/messageGamer"
        android:layout_width="258dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/green_vibrant"
        android:fontFamily="@font/play_regular"
        android:hint="@string/messageforum"
        android:shadowColor="@color/green_vibrant"
        android:textColor="@color/green_vibrant"
        android:textColorHint="@color/green_vibrant"
        app:layout_constraintBottom_toTopOf="@+id/scrollChat"
        app:layout_constraintEnd_toStartOf="@+id/sendMessageBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_chat" />

    <Button
        android:id="@+id/updateChatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="updateChat"
        android:text="@string/update"
        android:textColor="@color/green_vibrant"
        android:textSize="15sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollChat" />

    <ScrollView
        android:id="@+id/scrollChat"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/pastelGreen"
        app:layout_constraintBottom_toTopOf="@+id/updateChatBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageGamer">

        <TableLayout
            android:id="@+id/layoutChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_vibrant"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/play_regular"
                    android:gravity="center"
                    android:text="@string/gamer"
                    android:textColor="@color/pinky_vibrant"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/chatMessageTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="@font/play_regular"
                    android:gravity="center"
                    android:text="@string/message"
                    android:textColor="@color/pinky_vibrant"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/sendMessageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="postMessage"
        android:text="@string/send"

        android:textColor="@color/green_vibrant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/messageGamer"
        app:layout_constraintTop_toTopOf="@+id/messageGamer" />

</androidx.constraintlayout.widget.ConstraintLayout>